# image-difference-statistics

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
image_difference_statistics/: distance_metrics.py  plots.py  similarity_metrics.py
image_difference_statistics/data/: __init__.py  check.py
image_difference_statistics/transforms/: euclidean.py
notebooks/: sample_transforms.ipynb
requirements/: dev-requirements.txt  requirements.txt
