[project]
name = "image_difference_statistics"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ipykernel",
    "matplotlib",
    "numpy",
    "pillow",
    "seaborn",
    "scikit-image"
]

[tool.setuptools]
packages = ["image_difference_statistics"]

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "PIL",
    "skimage.*",
]
ignore_missing_imports = true
